# fastapi-cibersecurity

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_seed_threat_indicators.py  c4832cae2f8d_initial_schema.py
app/: main.py
app/api/v1/: events.py  health.py  threats.py
app/core/: config.py  database.py  dependencies.py  logging.py
app/models/: __init__.py  security_event.py  threat_indicator.py
app/repositories/: __init__.py  event_repository.py  indicator_repository.py
app/schemas/: events.py  health.py  threats.py
app/services/: __init__.py  event_service.py  scoring.py
docs/superpowers/plans/: 2026-06-09-phase-1-scaffold.md
docs/superpowers/specs/: 2026-06-09-threat-analysis-api-design.md
tests/: conftest.py
tests/api/: test_events.py  test_health.py  test_health_checks.py  test_threats.py
tests/core/: test_config.py  test_database.py  test_dependencies.py  test_logging.py
tests/models/: test_security_event.py  test_threat_indicator.py
tests/repositories/: test_event_repository.py  test_indicator_repository.py
tests/schemas/: test_health_schemas.py
tests/services/: test_event_service.py  test_scoring.py
